Added Spaces Patch
Added functionality for handling spaces in location names. Updated
documentation.

--- a/docs.html
+++ b/docs.html
@@ -9,9 +9,9 @@
 
 <body>
 	<h1>Class FunctionLib</h1>
-	<h2>Public Function GetMileageFromLocations(fromcode As String, tocode As String) As Decimal</h2><br><p>Convert two locations into the distance between them. Returns the mileage as a decimal.</p><br>
+	<h2>Public Function GetMileageFromLocations(fromLocation As String, toLocation As String) As Decimal</h2><br><p>Convert two locations into the distance between them. Returns the mileage as a decimal.</p><br>
 
-    <h2>Public Function GetTimeFromLocations(fromcode As String, tocode As String) As String</h2><br><p>Convert two locations into the time it takes to travel between them. Returns the time as a string without spaces.</p><br>
+    <h2>Public Function GetTimeFromLocations(fromLocation As String, toLocation As String) As String</h2><br><p>Convert two locations into the time it takes to travel between them. Returns the time as a string without spaces.</p><br>
 
     <h2>Public Function GetJsonValue(jsonText As String, name As String, Optional skipCount As Integer = 0) As String</h2><br><p>Get the value of a JSON entry. Returns the value as a string.</p><br>
 
